--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "1.2.0"
 authors = ["Filipponik"]
 edition = "2021"
 description = "Today pufa word"
+readme = "README.md"
 repository = "https://github.com/Filipponik/pufa-rs"
 keywords = ["axum-rs", "server", "web-server"]
 categories = ["web-programming", "web-programming::http-server"]
