--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,11 @@ panic = "abort"
 reqwest = "0.12.2"
 tokio={ version = "1.32.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 regex = "1.10.4"
 chrono = "0.4.37"
 base64 = "0.22.0"
 axum = "0.7.5"
 lazy_static = "1.4.0"
 thiserror = "2.0.11"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing = "0.1.41"
