--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,14 @@ categories = ["web-programming", "web-programming::http-server"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [profile.release]
 strip = true
-opt-level = "s"
-lto = true
+opt-level = "z"
+lto = "fat"
 codegen-units = 1
 panic = "abort"
 
 [dependencies]
 reqwest = "0.12.2"
-tokio={ version = "1.32.0", features = ["full"] }
+tokio = { version = "1.32.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 regex = "1.10.4"
 chrono = "0.4.37"
