--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ lazy_static = "1.4.0"
 thiserror = "2.0.11"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tracing = "0.1.41"
+once_cell = "1.20.3"
