--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,11 +22,12 @@ reqwest = "0.12.2"
 tokio = { version = "1.32.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 regex = "1.10.4"
-chrono = "0.4.37"
+chrono = { version = "0.4.37", features = ["serde"] }
 base64 = "0.22.0"
 axum = "0.8.1"
-lazy_static = "1.4.0"
 thiserror = "2.0.11"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tracing = "0.1.41"
 once_cell = "1.20.3"
+redis = { version = "0.28.2", features = ["aio", "tokio-comp"] }
+serde_json = "1.0.138"
